--- a/index.html
+++ b/index.html
@@ -20,58 +20,52 @@
 
 // CTRL+L  
 
-
 // 6. Go to the last level below the small-name folder and show on the console the content of the trophy.txt file:
 
-// Navigate till the folder which is called "small-name" and show the content of the file trophy.txt by the command:
+//  navigate till the folder which is called "small-name" and show the content of the file trophy.txt by the command:
 //  $ cd /workspace/exercise-terminal-challenge/thecmdchallenge/small-name
-// in order to exit, use Ctrl+X
+//  in order to exit, use Ctrl+X
 
 
 // 7. Move one level up and get to the funcode directory and list all files with the javascript typical extension:
 
-// $ cd /workspace/exercise-terminal-challenge/thecmdchallenge/funcode
-// $ ls *.js
+//   $ cd /workspace/exercise-terminal-challenge/thecmdchallenge/funcode
+//   $ ls *.js
 
 
 // 8. Create a new directory inside funcode/the-most-funny/ called “not-that-funny“:
-// $ cd /workspace/exercise-terminal-challenge/thecmdchallenge/funcode/the-most-funny
-// $ mkdir not-that-funny
+//   $ cd /workspace/exercise-terminal-challenge/thecmdchallenge/funcode/the-most-funny
+//   $ mkdir not-that-funny
 
 
 // 9. Create a copy of the-mostboring-text.txt (you can find it within /boringfolder/‘s children) and name it lol.txt:
-// $ cd /workspace/exercise-terminal-challenge/thecmdchallenge/boringfolder/event-more-boring
-// $ cd /workspace/exercise-terminal-challenge/thecmdchallenge/boringfolder/event-more-boring/i-can-believe-how-boring/the-ulrimate-boring-inception
-// $ cp the-mostboring-text-txt /workspace/exercise-terminal-challenge/thecmdchallenge/boringfolder/event-more-boring/i-can-believe-how-boring/the-ulrimate-boring-inception 
-// $ mv the-mostboring-text-txt lol.txt OR $ cat the-mostboring-text.txt to lol.txt
+//   $ cd /workspace/exercise-terminal-challenge/thecmdchallenge/boringfolder/event-more-boring
+//   $ cd /workspace/exercise-terminal-challenge/thecmdchallenge/boringfolder/event-more-boring/i-can-believe-how-boring/the-ulrimate-boring-inception
+//   $ cp the-mostboring-text-txt /workspace/exercise-terminal-challenge/thecmdchallenge/boringfolder/event-more-boring/i-can-believe-how-boring/the-ulrimate-boring-inception 
+//   $ mv the-mostboring-text-txt lol.txt OR $ cat the-mostboring-text.txt to lol.txt
 
 
 // 10. Move funcode/kids.jpg inside funcode/images/hello/:
 
-// $ cd /workspace/exercise-terminal-challenge/thecmdchallenge/funcode/images
-// $ mv kids.jpg /workspace/exercise-terminal-challenge/thecmdchallenge/funcode/images/hello/
-mv: cannot stat 'kids.jpg': No such file or directory
+//   $ cd /workspace/exercise-terminal-challenge/thecmdchallenge/funcode/images
+//   $ mv kids.jpg /workspace/exercise-terminal-challenge/thecmdchallenge/funcode/images/hello/
+//   mv: cannot stat 'kids.jpg': No such file or directory
 
 // 11. Remove the “small-name“ directory:
 
-//  $ cd /workspace/exercise-terminal-challenge/thecmdchallenge/kamehameha
-//  $ rm small-name
+//   $ cd /workspace/exercise-terminal-challenge/thecmdchallenge/kamehameha
+//   $ rm small-name
 
 // 12. Print in the command line the content of the-ultimate-joke.txt:
 
-// $ cmd dragon-ball-jokes.md
+//   $ cmd dragon-ball-jokes.md
 
 
 // 13. Remove all the contents from the boringfolder, they are extremely boring…:
 
-// navigate to boringfolder and then $ lprm  
+//   navigate to boringfolder and then $ lprm  
 
 
-// 14. Open the file kamehameha/dragon-ball-jokes.md using the VI command line text editor:
-
-
-
-
-// 15. Update the file kamehameha/dragon-ball-jokes.md by removing the first joke you read on the file, finally save and close the text editor:
+// 14. Update the file kamehameha/dragon-ball-jokes.md by removing the first joke you read on the file, finally save and close the text editor:
 
 $ navigate to the necessary file and use the NANO text editor, Save the document afterwards.
