--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-// Comand line challenge:
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h4>
+        <!-- // Comand line challenge:
 
 // 1. Get inside the thecmdchallenge/ directory: 
 
@@ -68,4 +78,8 @@
 
 // 14. Update the file kamehameha/dragon-ball-jokes.md by removing the first joke you read on the file, finally save and close the text editor:
 
-$ navigate to the necessary file and use the NANO text editor, Save the document afterwards.
+$ navigate to the necessary file and use the NANO text editor, Save the document afterwards. -->
+
+    </h4>
+</body>
+</html>
